Add some updates

--- a/cv/cv_depret_axel.tex
+++ b/cv/cv_depret_axel.tex
@@ -1,4 +1,4 @@
-\documentclass[11pt,a4paper,sans]{moderncv}
+\documentclass[10pt,a4paper,sans]{moderncv}
 \moderncvstyle{classic} 
 \moderncvcolor{blue}
 \setlength{\hintscolumnwidth}{3cm}
@@ -11,8 +11,8 @@
 \usepackage{enumitem}
 
 \name{Axel}{DEPRET}
-\title{Ingénieur étude et développement} 
-\address{22 bis rue de l'abrivado}{34\,070 Montpellier}{France}
+\title{Développeur web} 
+\address{1 boulevard Alain Savary}{31\,170 Tournefeuille}{France}
 \phone[mobile]{06~69~67~40~39}
 \email{axel.depret.pro@gmail.com}
 \social[linkedin][fr.linkedin.com/pub/axel-depret/108/699/658]{Depret Axel}
@@ -38,22 +38,30 @@
 \newcommand{\cvdoubleitembold}[4]{\cvdoubleitem{\textbf{#1}}{#2}{\textbf{#3}}{#4}}
 
 \section{Formation}
-\cventrylogo{2015--2017}{Master 2 Architecture et ingénierie du logiciel et du web}{}{}{}{images/um}{20mm}{\textit{Université Montpellier}}
-\cventrylogo{2014--2015}{Master 1 Architecture et ingénierie du logiciel et du web}{}{}{}{images/um}{20mm}{\textit{Université Montpellier}}
+\cventrylogo{2014--2017}{Master Architecture et ingénierie du logiciel et du web}{}{}{}{images/um}{20mm}{\textit{Université Montpellier}}
 \cventrylogo{2013--2014}{Licence 3 informatique}{}{}{}{images/um}{20mm}{\textit{Université Montpellier}}
 \cventrylogo{2011--2013}{IUT informatique}{}{}{}{images/iut}{20mm}{\textit{Montpellier}}
 %\cventry{2011}{Baccalauréat Scientifique option Sciences de l'Ingénieur}{\newline Lycée Joseph Vallot}{Lodève}{\newline \textit{mention Assez bien}}{}
 
 \section{Experiences professionnelles}
-\cventrylogo{août 2019--\\Actuellement}{Ingénieur étude et développement à La Poste BSCC}{\textit{Montpellier}}{}{}{images/laposte}{10mm}{
-  Travaux réalisés sous la méthode SAFe :
+\cventrylogo{septembre 2021 --\\Actuellement}{Développeur web à Spiriit}{\textit{Montpellier}}{}{}{images/spiriit}{12mm}{
+  \vspace{-1ex}
   \begin{itemize}[label=\textbullet]
-  \item Portail Assistant Courrier -- Site regroupant des outils et conseils destinés aux entreprises et collectivités
+  \item Drupal 7, 8, 9 -- Projets (Cirad OASIS, E-santé, Arvalis), TMA (MAJ sécurité, migration 8 $\rightarrow$ 9)
+  \item Prestashop 1.7, 8 -- BG Franck Bichon, TMA
+  \item Strapi 4 -- Mise en place d'un starter
+  \end{itemize}
+}
+\cventrylogo{août 2019 --\\août 2021}{Développeur Drupal\up{(8, 9)} à La Poste BSCC}{\textit{Montpellier}}{}{}{images/laposte}{10mm}{
+  \vspace{-1ex}
+  \begin{itemize}[label=\textbullet]
+  \item Portail Assistant Courrier -- Site regroupant des outils et conseils destinés aux entreprises \\et collectivités
   \item Solutionsbtob -- Ensemble de "minisites" présentant des solutions business 
   \item Webcallback3634 -- Formulaire permettant d'être appelé par un conseiller
   \end{itemize}
 }
-\cventrylogo{janvier 2017--\\août 2019}{Stagiaire puis ingénieur étude et développement à SMILE}{\textit{Montpellier}}{}{}{images/smile}{15mm}{
+\cventrylogo{janvier 2017 --\\août 2019}{Stagiaire puis développeur Drupal\up{(8)} à SMILE}{\textit{Montpellier}}{}{}{images/smile}{15mm}{
+  \vspace{-1ex}
   \begin{itemize}[label=\textbullet]
   \item Création de sites vitrines pour BNP Paribas Real Estate
   \item Refonte du site de SMILE
@@ -62,13 +70,13 @@
 }
 
 \section{Compétences informatiques}
-\cvdoubleitembold{Développ. Web}{PHP, SQL, HTML/CSS, Sass, JQuery, XML, JSON, Drupal, Symfony}{Base de données}{MySQL, Oracle, SQLite}
-\cvdoubleitembold{Langages}{Python, Bash, C}{Conception}{Design Pattern}
-\cvdoubleitembold{Virtualisation}{Docker, LXC, VirtualBox}{Mobile}{Android SDK, Cordoba}
-\cvsingleitembold{Autres}{Composer, Pip, Elasticsearch, Méthode SAFe, Tkinter}
+\cvdoubleitembold{Développ. Web Back}{Drupal, Symfony, Prestashop, Strapi}{Base de données}{MySQL, PostgreSQL, SQLite}
+\cvdoubleitembold{Développ. Web Front}{Twig, Smarty, Angular, Nuxt}{Conception}{Design Pattern, SOLID, DDD, TDD}
+\cvdoubleitembold{Langages}{PHP, Python, Bash, C}{Virtualisation}{Docker, LXC, VirtualBox}
+\cvdoubleitembold{Autres}{Composer, Npm, Yarn, Algolia, Elasticsearch, Méthode SAFe, Pip}{}{}
 
 \section{Divers}
-\cvdoubleitembold{Langue}{\textbf{Français} : Langue maternelle \\ \textbf{Anglais} : Lu\up{+}, écrit\up{+}, parlé\up{+} \\ \textbf{Espagnol} : Niveau scolaire}{Loisirs}{football, tennis, cyclisme, jeux vidéo, piano}
+\cvdoubleitembold{Langue}{\textbf{Français:} Langue maternelle \\ \textbf{Anglais:} Lu\up{+}, écrit\up{+}, parlé\up{+} \\ \textbf{Espagnol:} Niveau scolaire}{Loisirs}{football, tennis, cyclisme, jeux vidéo}
 
 
 \end{document}
